core deliverables complete

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   </header>
 
   <!-- Ramen Menu -->
-  <div id="ramen-menu">
+  <div id="ramenMenu">
     <!-- Ramen Images Here -->
   </div>
 
   <!-- Ramen Details -->
   <div id="ramen-detail">
-    <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 class="name">Insert Name Here</h2>
-    <h3 class="restaurant">Insert Restaurant Here</h3>
+    <img class="detail-image" id="detailImage" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
+    <h2 id="detailName" class="name">Insert Name Here</h2>
+    <h3 id="detailRestaurant" class="restaurant">Insert Restaurant Here</h3>
   </div>
 
   <h3>Rating:</h3>
