--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img class="detail-image" id="detailImage" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
     <h2 id="detailName" class="name">Insert Name Here</h2>
     <h3 id="detailRestaurant" class="restaurant">Insert Restaurant Here</h3>
+    <button id="deleteButton" type="button">Click Me!</button>
+    
   </div>
 
   <h3>Rating:</h3>
@@ -48,6 +50,16 @@
     <label for="new-comment">Comment: </label>
     <textarea name="new-comment" id="new-comment"></textarea>
     <input type="submit" value="Create" />
+  </form>
+
+  <form id="edit-ramen">
+    <h4>Update the Featured Ramen</h4>
+    <label for="rating">Rating: </label>
+    <input type="number" name="rating" id="editedRating" />
+    <label for="new-comment">Comment: </label>
+    <textarea name="new-comment" id="editedComment"></textarea>
+    <input type="submit" value="Update" />
+    
   </form>
 
 </body>
